# drmc-rl

./: .gitignore  .gitmodules  AGENTS.md  DESIGN_DISCUSSIONS.md  IMPLEMENTATION_COMPLETE.md  PLACEMENT_POLICY_IMPLEMENTATION.md  QUICK_START_PLACEMENT_POLICY.md  README.md  commandlines.txt  gup-placement-wrapper.patch  package-lock.json  patch1.patch  patch2.patch  patch3.patch  planner_rewrite_roadmap.md  pyproject.toml
.git-hooks/: pre-commit-block-roms.sh
cores/: fceumm_libretro.dylib  quicknes_libretro.dylib
data/: cpp_demo_aligned.json  cpp_demo_fixed.json  cpp_demo_fixed2.json  cpp_demo_offset124.json  cpp_demo_spawn_delay.json  cpp_demo_test.json  nes_demo.json
docs/: AGENTS.md  AGENT_CHECKLIST_STREAMING_DATA.md  AGENT_PROMPT_REIMPLEMENTATION.md  CONTRIBUTING.md  CPP_SIM_NOTES.md  DESIGN.md  DYNAMICS_SPEC.md  ENV_STANDUP_MAC_LINUX.md  EOCLabbook.md  IMPLEMENTATION_FACTS_AND_RAMMAP.md  LEGAL.md  METRICS.md  PLACEMENT_PLANNER.md  PLACEMENT_POLICY.md  RAM_TO_STATE.md  REFERENCES.md  RETRO_CORE_NOTES.md  REWARD_SHAPING.md  RNG.md  RNG_AND_PLACEMENT_NOTES.md  SF_CONFIGS.md  STATE_OBS_AND_RAM_MAPPING.md  STREAMING_ETC_SPEC.md  TASKS_NEXT.md  USE_CASES_VISION.md  VERIFICATION_CHECKLIST.md
drmarioai/: Address.java  Color.java  DefaultEvaluator.java  Evaluator.java  Searcher.java  Tile.java
envs/: reward_shaping.py  state_core.py
game_engine/: AGENTS.md  DrMarioPool.cpp  DrMarioPool.h  GameLogic.cpp  GameLogic.h  GameState.h  Makefile  SharedMem.h  __init__.py  demo_benchmark.py  drmario_engine  drmario_pool_capi.cpp  drmario_pool_capi.h  engine_log.txt  engine_shm.py  main.cpp  monitor  monitor.cpp  monitor_log.txt
io-bridge/: README.md
notes/: BACKLOG.md  CHAT.md  DESIGN_ENGINE_TWIN_PROTOCOL.md  DESIGN_MULTIENV.md  MEMORY.md  SCRUTINY.md  WORKLOG.md
re/: README.md
reach_native/: BUILD.md  README.md  cm_layout.h  drm_reach.c  drm_reach_full.c  tests_drm_reach.c
retro/: README.md
sim-envpool/: README.md
streaming/: overlay_service.py
tests/: test_adapters.py  test_async_vec_env_stability.py  test_bench_multienv_smoke.py  test_bitplane_reduced_helpers.py  test_bottle_clear_counting.py  test_candidate_policy.py  test_candidate_policy_cpp_engine_smoke.py  test_clearing_tile_counter.py  test_cpp_backend_multienv.py  test_cpp_engine_timeout_recovery.py  test_cpp_pool_smoke.py  test_curriculum_scheduler.py  test_curriculum_vec_env.py  test_diagnostics.py  test_discounting.py  test_env_backend_mock.py  test_env_info.py  test_fast_reach.py  test_fast_reach_reconstruct_actions.py  test_feasible_mask_obs_injection.py  test_game_engine_demo.py  test_interactive_perf_counters.py  test_placement_actions.py  test_placement_env_masks.py  test_placement_env_no_feasible_actions.py  test_placement_env_spawn_latch.py  test_placement_planner.py  test_placement_policy.py  test_placement_smoke.py  test_placement_translator.py  test_policy_gradient_agent.py  test_ram_decode_field.py  test_ram_to_state_visible_only.py  test_reach_native_smoke.py  test_reward_shaping.py  test_rng_randomization.py  test_run_wandb_wiring.py  test_runner_real_env_factory.py  test_speedrun_action_mask.py  test_speedrun_nan_rewards.py  (+6 more)
tools/: bench_multienv.py  bench_reachability.py  build_drmario_pool.py  build_reach_native.py  capture_parity.py  check_checkpoints.py  create_core_review_zip.py  dump_ram_and_state.py  engine_demo_tui.py  game_transcript.py  ghost_parity.py  placement_diagnostics.py  placement_viz.py  plot_success_by_level.py  record_demo.py  (+8 more)
(+146 files in other folders)
