[project]
name = "drmc-rl"
version = "0.0.1"
description = "Dr. Mario RL environment, training, and evaluation"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "gymnasium>=1.2,<2",
    "numpy>=2.0,<3",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = []

[tool.setuptools]
# Explicitly control package discovery to avoid bundling non-packages (e.g., 're', 'retro')

[tool.setuptools.packages.find]
include = ["envs*", "models*", "eval*", "training*"]
exclude = [
  "re*", "retro*", "data*", "legal_ROMs*", "tools*", "streaming*", "docs*",
  "sim-envpool*", "dr-mario-disassembly*"
]

[project.optional-dependencies]
rl = [
    "torch>=2.8,<2.10",
    "torchvision==0.24.*",
    "torchaudio==2.9.*",
    "torchrl>=0.9,<1.0",
    "sample-factory>=2.0,<3.0",
    "pettingzoo>=1.25,<2",
]
viz = [
    "opencv-python-headless>=4.12,<5",
    "pillow>=11",
]
apple = [
    "mlx>=0.29,<1",
]
dev = [
    "black>=25.0",
    "ruff>=0.14",
    "pytest>=8.4",
    "pandas>=2.3,<2.4",
    "pyarrow>=21,<22",
    "matplotlib>=3.10,<3.11",
]

[build-system]
requires = ["setuptools>=80", "wheel>=0.45"]
build-backend = "setuptools.build_meta"
