[project]
name = "drmc-rl"
version = "0.0.1"
description = "Dr. Mario RL environment, training, and evaluation"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "gymnasium",
    "numpy",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = []

[tool.setuptools]
# Explicitly control package discovery to avoid bundling non-packages (e.g., 're', 'retro')

[tool.setuptools.packages.find]
include = ["envs*", "models*", "eval*", "training*"]
exclude = [
  "re*", "retro*", "data*", "legal_ROMs*", "tools*", "streaming*", "docs*",
  "sim-envpool*", "dr-mario-disassembly*"
]

[project.optional-dependencies]
rl = [
    "torch",
    "torchvision",
    "torchaudio",
    "torchrl",
    "sample-factory",
    "pettingzoo",
]
viz = [
    "opencv-python-headless",
    "pillow",
]
apple = [
    "mlx",
]
dev = [
    "black",
    "ruff",
    "pytest",
    "pandas",
    "pyarrow",
    "matplotlib",
]

[build-system]
requires = ["setuptools>=80", "wheel>=0.45"]
build-backend = "setuptools.build_meta"
